# growthExperimentIdeasSlackBot

./: .gitignore  CONTRIBUTING.md  Changelog.md  README.md  requirements.txt  setup.cfg
src/: bot.py
