[metadata]
name = ideaSlackBot
version = 0.1.0
author = Your Name
author_email = your.email@example.com
url = https://example.com
description = Short description of your project
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
requires_python = >=3.9
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
